--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
       <version>${protobuf-java.version}</version>
     </dependency>
     <dependency>
+      <groupId>javax.jms</groupId>
+      <artifactId>javax.jms-api</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jms</artifactId>
       <version>5.0.7.RELEASE</version>
