--- a/pom.xml
+++ b/pom.xml
@@ -28,24 +28,6 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>javax.jms</groupId>
-      <artifactId>javax.jms-api</artifactId>
-      <version>2.0.1</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.sun.messaging.mq</groupId>
-      <artifactId>jms</artifactId>
-      <version>4.5.1-b03</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.sun.messaging.mq</groupId>
-      <artifactId>imq</artifactId>
-      <version>4.5.1-b03</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>5.0.7.RELEASE</version>
@@ -68,6 +50,11 @@
       <artifactId>imq-patch</artifactId>
       <version>1.0.0</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.mq</groupId>
+      <artifactId>imq</artifactId>
+      <version>5.1</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
